/* eslint-env jest, jasmine */

import React from 'react';
import renderer from 'react-test-renderer';

import SearchBox from './SearchBox';
jest.unmock('./SearchBox');
jest.unmock('../themeable');
jest.unmock('../translatable');

let tree;

describe('SearchBox', () => {
  it('applies its default props', () => {
    tree = renderer.create(
      <SearchBox />
    ).toJSON();
    expect(tree).toMatchSnapshot();
  });

  it('transfers the autoFocus prop to the underlying input element', () => {
    tree = renderer.create(
      <SearchBox autoFocus />
    ).toJSON();
    expect(tree).toMatchSnapshot();
  });

  it('treats its query prop as its input value', () => {
    const inst = renderer.create(
      <SearchBox query="QUERY1" />
    );
    expect(inst.toJSON()).toMatchSnapshot();

    inst.update(
      <SearchBox query="QUERY2" />
    );
    expect(inst.toJSON()).toMatchSnapshot();
  });

  it('lets you customize its theme', () => {
    tree = renderer.create(
      <SearchBox
        theme={{
          root: 'ROOT',
          wrapper: 'WRAPPER',
          input: 'INPUT',
          submit: 'SUBMIT',
          reset: 'RESET',
        }}
      />
    ).toJSON();
    expect(tree).toMatchSnapshot();
  });

  it('lets you customize its translations', () => {
    tree = renderer.create(
      <SearchBox
        translations={{
          submit: 'SUBMIT',
          reset: 'RESET',
          submitTitle: 'SUBMIT_TITLE',
          resetTitle: 'RESET_TITLE',
          placeholder: 'PLACEHOLDER',
        }}
      />
    ).toJSON();
    expect(tree).toMatchSnapshot();
  });
});
