exports[`SearchBox applies its default props 1`] = `
<form
  className="SearchBox"
  noValidate={true}
  onReset={[Function anonymous]}
  onSubmit={[Function anonymous]}>
  <div
    className="SearchBox__wrapper"
    role="search">
    <input
      autoComplete={false}
      autoFocus={false}
      className="SearchBox__input"
      onChange={[Function anonymous]}
      placeholder="Search your website"
      required={true}
      type="search"
      value="" />
    <button
      className="SearchBox__submit"
      title="Submit your search query."
      type="submit" />
    <button
      className="SearchBox__reset"
      title="Clear the search query."
      type="reset" />
  </div>
</form>
`;

exports[`SearchBox lets you customize its theme 1`] = `
<form
  className="ROOT"
  noValidate={true}
  onReset={[Function anonymous]}
  onSubmit={[Function anonymous]}>
  <div
    className="WRAPPER"
    role="search">
    <input
      autoComplete={false}
      autoFocus={false}
      className="INPUT"
      onChange={[Function anonymous]}
      placeholder="Search your website"
      required={true}
      type="search"
      value="" />
    <button
      className="SUBMIT"
      title="Submit your search query."
      type="submit" />
    <button
      className="RESET"
      title="Clear the search query."
      type="reset" />
  </div>
</form>
`;

exports[`SearchBox lets you customize its translations 1`] = `
<form
  className="SearchBox"
  noValidate={true}
  onReset={[Function anonymous]}
  onSubmit={[Function anonymous]}>
  <div
    className="SearchBox__wrapper"
    role="search">
    <input
      autoComplete={false}
      autoFocus={false}
      className="SearchBox__input"
      onChange={[Function anonymous]}
      placeholder="PLACEHOLDER"
      required={true}
      type="search"
      value="" />
    <button
      className="SearchBox__submit"
      title="SUBMIT_TITLE"
      type="submit">
      SUBMIT
    </button>
    <button
      className="SearchBox__reset"
      title="RESET_TITLE"
      type="reset">
      RESET
    </button>
  </div>
</form>
`;

exports[`SearchBox transfers the autoFocus prop to the underlying input element 1`] = `
<form
  className="SearchBox"
  noValidate={true}
  onReset={[Function anonymous]}
  onSubmit={[Function anonymous]}>
  <div
    className="SearchBox__wrapper"
    role="search">
    <input
      autoComplete={false}
      autoFocus={true}
      className="SearchBox__input"
      onChange={[Function anonymous]}
      placeholder="Search your website"
      required={true}
      type="search"
      value="" />
    <button
      className="SearchBox__submit"
      title="Submit your search query."
      type="submit" />
    <button
      className="SearchBox__reset"
      title="Clear the search query."
      type="reset" />
  </div>
</form>
`;

exports[`SearchBox treats its query prop as its input value 1`] = `
<form
  className="SearchBox"
  noValidate={true}
  onReset={[Function anonymous]}
  onSubmit={[Function anonymous]}>
  <div
    className="SearchBox__wrapper"
    role="search">
    <input
      autoComplete={false}
      autoFocus={false}
      className="SearchBox__input"
      onChange={[Function anonymous]}
      placeholder="Search your website"
      required={true}
      type="search"
      value="QUERY1" />
    <button
      className="SearchBox__submit"
      title="Submit your search query."
      type="submit" />
    <button
      className="SearchBox__reset"
      title="Clear the search query."
      type="reset" />
  </div>
</form>
`;

exports[`SearchBox treats its query prop as its input value 2`] = `
<form
  className="SearchBox"
  noValidate={true}
  onReset={[Function anonymous]}
  onSubmit={[Function anonymous]}>
  <div
    className="SearchBox__wrapper"
    role="search">
    <input
      autoComplete={false}
      autoFocus={false}
      className="SearchBox__input"
      onChange={[Function anonymous]}
      placeholder="Search your website"
      required={true}
      type="search"
      value="QUERY2" />
    <button
      className="SearchBox__submit"
      title="Submit your search query."
      type="submit" />
    <button
      className="SearchBox__reset"
      title="Clear the search query."
      type="reset" />
  </div>
</form>
`;
